--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 tf.min.js
 d3.v6.min.js
+tgba/tgba.aux
+tgba/tgba.bbl
+tgba/tgba.bcf
+tgba/tgba.blg
+tgba/tgba.log
+tgba/tgba.run.xml
+tgba/tgba.synctex.gz
